Changelog 2022.02.01
- Fixed #37: Right click menu not appearing where it should.
- Fixed #45: BookmarksMenu has wrong position when scrollbar is visible
- added message to remove Google bookmark. Thanks to vapier

Changelog 2022.01.08
- Do not use 'activeTab' permission anymore
- Use permission google.com/bookmarks. Thanks to vapier

Changelog 2020.02.02
- DOM optimization: create <span> only for folders
- Show tooltip for long bookmarks by default

Changelog 2019.12.02
- Fix: ContextMenu 'remove' does nothing

Changelog 2019.12.01
- Fixed issue with scrollbar
- Code refactoring
- Fix: no error message shown when failed to load google bookmarks

Changelog 2019.09.16
- Fix: suggestions for google bookmarks doesn't work
- Fix: open all in incognito window requires additional setting for the extension
- started using js modules
- removed monkeypatch NodeList.forEach

Changelog 2019.04.02
- Fixed issue: context-menu item "Remove" is enabled for non-empty folders
- Fixed i18n for German
- JS: 'use strict' everywhere

Changelog 2019.01.14.3
- Recovered bookmarklets

Changelog 2019.01.14.2
- Fixed bug: options page shows mobile bookmarks
- Rolled back: Fixed popup's width and height. MANY THANKS FOR FEEDBACK

Changelog 2019.01.14
- Fixed popup's width and height
- Reworked options page
- Endlich auf Deutsch

Changelog 3.4.15 (22.08.2013)
- Fixed Google Bookmarks for Chrome 29

Changelog 3.4.14 (26.07.2013)
- Open Bookmark Manager for current folder.
- if Bookmark Manager is already opened switch to tab instead of creating new one.

Changelog 3.4.13 (25.07.2013)
- Added new context menu item: Bookmark Manager
- Fixed issue: add/remove Google bookmark doesn't work.

Changelog 3.4.12 (24.07.2013)
- Options page: html5 colorpicker is used instead of jscolor

Changelog 3.4.11 (20.07.2013)
- Font chooser (options page): show list of all system fonts.
- Code refactoring.

Changelog 3.4.10 (16.07.2013)